# nanobind_pyarrow

./: .clang-format  .clangd  .clangd.in  .env.in  .gitignore  CMakeLists.txt  LICENSE  ProjectOptions.cmake  README.md
.github/workflows/: ci.yml
cmake/: CompilerWarnings.cmake  FindPyArrow.cmake  Sanitizers.cmake  StandardProjectSettings.cmake
include/nanobind_pyarrow/: array_binary.h  array_binary_c_api.h  array_nested.h  array_nested_c_api.h  array_primitive.h  array_primitive_c_api.h  buffer.h  c_api_array_primitive.h  chunked_array.h  datatype.h  pyarrow_import.h  record_batch.h  scalar.h  sparse_tensor.h  table.h  tensor.h  type.h
include/nanobind_pyarrow/c-api/: double_caster.hpp
include/nanobind_pyarrow/detail/: always_false.h  array_caster.h  capi_array_caster.h  capi_schema_caster.h  capi_stream_caster.h  caster.h  pyarrow_caster_name_trait.h
include/nanobind_pyarrow/impl/: array_binary_common.h  array_nested_common.h  array_primitive_common.h
tests/: CMakeLists.txt  helpers.hpp  requirements.txt  run_tests.sh  test_array_binary.cpp  test_array_binary.py  test_array_nested.cpp  test_array_nested.py  test_array_primitive.cpp  test_array_primitive.py  test_buffer.cpp  test_buffer.py  test_c_api_array.cpp  test_c_api_array.py  test_chunked_array.cpp  test_chunked_array.py  test_datatype.cpp  test_datatype.py  test_record_batch.cpp  test_record_batch.py  test_scalar.cpp  test_scalar.py  test_table.cpp  test_table.py  test_tensor.cpp  test_tensor.py  test_type.cpp  test_type.py
